--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,44 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-button (click)="limpar()"slot="end">
+      C
+    </ion-button>
     <ion-title>
-      Tab 1
+      Calculadora
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-item>
+      <ion-label position="floating">Valor 1</ion-label>
+      <ion-input type="number" [(ngModel)]="valorUm"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Valor 2</ion-label>
+      <ion-input type="number" [(ngModel)]="valorDois"></ion-input>
+    </ion-item>
+
+  </ion-card>
+
+  <ion-item>
+    <ion-button (click)="somar()" size="large">+</ion-button>
+    <ion-button (click)="subtrair()" size="large">-</ion-button>
+    <ion-button (click)="multiplicar()" size="large">*</ion-button>
+    <ion-button (click)="dividir()" size="large">/</ion-button>
+  </ion-item>
+  <ion-item>
+    <ion-button (click)="maior()" size="large">Maior</ion-button>
+    <ion-button size="large">Menor</ion-button>
+  </ion-item>
+  <ion-item>
+    <ion-label>Resultado: </ion-label>
+    <ion-label>{{resultado}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Conta: </ion-label>
+  </ion-item>
 </ion-content>
