--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-item>
     <ion-label position="floating">Operação: </ion-label>
-    <ion-input type="number" [(ngModel)]="operacao"></ion-input>
+    <ion-input [(ngModel)]="operacao"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Resultado: </ion-label>
